DuPont DevSB/src/objects/CSAT_CLSMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CSAT_CLSMapping - Field mapping between CustomerSat and Customer Loyalty Survey object.</description>
    <fields>
        <fullName>CLS_FieldName__c</fullName>
        <description>Customer Loyalty Survey Field Name</description>
        <externalId>true</externalId>
        <inlineHelpText>Customer Loyalty Survey Field Name</inlineHelpText>
        <label>CLS_FieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Desc__c</fullName>
        <description>CSAT Desc</description>
        <label>CSAT Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_QID__c</fullName>
        <description>CustomerSAT Question ID (QID)</description>
        <externalId>true</externalId>
        <inlineHelpText>CustomerSAT Question ID (QID)</inlineHelpText>
        <label>CSAT_QID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>push / pull or both</description>
        <label>Direction</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CSAT_CLSMapping</label>
</CustomObject>